# axum-example

./: .gitignore  Cargo.toml  README.md  test.html
migrations/: 20240708054005_init.down.sql  20240708054005_init.up.sql
migrations/2024-06-14-155047_all/: down.sql  up.sql
src/: common.rs  lib.rs  main.rs  models.rs  pgnation.rs  routes_account.rs  routes_assets.rs  routes_booking.rs  routes_index.rs  routes_products.rs  routes_provision.rs  routes_purchases.rs  routes_room_chats.rs  routes_schedule.rs  routes_subscriptions.rs  routes_user_chats.rs  schema.rs
src/auth/: check.rs  handlers.rs  models.rs  views.rs
src/booking/: creat.rs  dates.rs  handlers.rs  hours.rs  models.rs  repository.rs  views.rs
src/chats/: handler_rm.rs  handler_us.rs  handlers.rs  models.rs  repository.rs  views.rs
src/comments/: creat.rs  models.rs  views.rs
src/distribution/: routes_account.rs  routes_assets.rs  routes_booking.rs  routes_index.rs  routes_photo.rs  routes_products.rs  routes_provision.rs  routes_purchases.rs  routes_room_chats.rs  routes_schedule.rs  routes_subscriptions.rs  routes_user_chats.rs
src/import_export/: handlers.rs  models.rs  views.rs
src/photo/: handlers.rs  models.rs  views.rs
src/products/: creat.rs  handlers.rs  models.rs  views.rs
src/profile/: accreditation.rs  handlers.rs  models.rs  views.rs
src/provision/: creat.rs  dates.rs  handlers.rs  hours.rs  models.rs  repository.rs  views.rs
src/purchases/: handlers.rs  models.rs  order.rs  views.rs
src/recording/: creat.go  creat.rs  views.go
src/schedule/: creat.rs  handlers.rs  models.rs  views.rs
src/sitemap/: handlers.rs  views.rs
src/subscriptions/: creat.rs  handlers.rs  models.rs  repository.rs  views.rs
src/util/: date_config.rs  date_option.rs  q_body.rs  r_body.rs
templates/: base.html  index.html  login.html  navbar.html  password_change.html  signup.html  update.html  user.html  users.html
templates/booking/: all_booking.html  all_days.html  period.html  search_days.html
templates/chats/: dialogue_owner.html  room.html  user.html
templates/products/: all.html  categories.html  creat.html  cts.html  detail.html  select.html
templates/provision/: all_days.html  all_hours.html  creat_days.html  creat_hours.html  detail_days.html  update_dates.html
templates/purchases/: all.html  order.html
templates/schedule/: BasicDateTimePicker.htm  all.html  all_recording.html  all_sch.html  creat-js.html  creat.html  places.html  select.html
templates/sitemap/: sitemap.html  sitemap.xml
templates/subscriptions/: creat.html  groups.html  ssc_owner.html  ssc_to_user.html
to_csv/: export.csv
tps/: base.html  delete.html  index.html  login.html  navbar.html
tps/booking/: all_booking.html  delete.html  detail_days.html  detail_hours.html  matching_days.html  matching_hours.html  search_days.html  search_hours.html
tps/chats/: dialogue_owner.html  room.html  user.html
tps/element/: comments.html  completed.html  created_updated.html  export_csv.html  rq_user.html  st_en_date.html  st_en_hour.html
tps/photo/: photo.html
(+48 files in other folders)
