[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "ws", "original-uri"] }
axum-extra = { version = "0.9", features = ["typed-header", "form"] }
futures = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono", "any"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde", "alloc"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
headers = "0.4"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
tera = "1.19"
csv = "1.3"
axum-macros = "0.4"
futures-util = "0.3"
serde_urlencoded = "0.7"
serde_json = "1.0"
rand = "0.8.5"
bincode = "1.3"
base64 = "0.22"

