[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
bb8 = "0.9"
bb8-postgres = "0.9"
redis = { version = "1", default-features = false, features = ["tokio-comp", "bb8"] }
axum = { version = "0.8", features = ["json", "multipart", "ws", "macros"] }
axum-extra = { version = "0.12", features = ["form"] }
tera = "1.2"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["filter"] }
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust", "jwe"] }
futures = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
dotenv = "0.15"
rand = "0.10"
csv = "1.4"
